Improve test coverage and code consistency
- Add missing trailing newline in CoveragePathMatcherTest.java
- Strengthen fallback test to verify path matcher actually resolves paths
  (previously the test only checked annotations were created without errors,
  but never verified the fallback produced a different, resolved path)
- Replace Collections.emptySet() with Set.of() for consistency